# g70k_trae

./: .env.example  .env.test  .gitignore  CONFIGURACAO_EMAIL.md  add_more_vehicles_sergio.py  analyze_ftoniolo.py  caspio_import_analysis_report.txt  check_db_structure.py  check_sergio_all_vehicles.py  check_sergio_users.py  check_xml_structure.py  comprehensive_import_analysis.py  comprehensive_search_ftoniolo.py  create_confirmed_test_user.py  create_produtos_teste.py  create_sergio_vehicle.py  create_test_user.py  debug_auth.py  debug_sergio_page.py  debug_session_structure.py  debug_veiculo_cadastro.py  debug_veiculos_page.html  diagnose_foreign_keys.py  g70k.db  main.py  migrate_for_caspio_import.py  pyproject.toml  run_test_with_env.py  test_admin_debug.py  test_caspio_import.py  test_cookie_debug.py  test_cookie_detailed.py  test_garantia_form_preservacao.py  test_garantia_view.py  test_listar_veiculos_function.py  test_login_fix.py  test_login_session.py  test_manual_login.py  test_playwright.py  test_sergio_login.py  (+8 more)
app/: __init__.py  async_tasks.py  auth.py  cep_service.py  config.py  database.py  date_utils.py  email_service.py  filter_component.py  logger.py  routes.py  routes_admin.py  routes_garantias.py  routes_veiculos.py  templates.py
config/: playwright.config.py
data/: README.md  viemar_garantia.db  viemar_garantia.db-shm  viemar_garantia.db-wal
docs/: CONFIGURACAO_HOSTNAME.md  ESTRUTURA_PROJETO.md  PROJECT_RULES.md  README_SECURITY.md
logs/: viemar_garantia.log.2025-09-08  viemar_garantia.log.2025-09-09  viemar_garantia.log.2025-09-10  viemar_garantia.log.2025-09-11  viemar_garantia.log.2025-09-12
models/: __init__.py  garantia.py  produto.py  usuario.py  veiculo.py
scripts/: README.md
static/: style.css
tests/: README_api_brasil.md  __init__.py  check_app_database.py  check_ftoniolo_user.py  check_sergio_auth.py  check_user.py  (+80 more)
(+37 files in other folders)
